# dt_sales_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  auth.py  brochure_kit.py  config.py  context.py  deploy.ps1  gemini_fallback.py  guardrails.py  models.py  pptx_to_pdf.py  pyproject.toml  requirements.txt  skeleton.pptx  trusted_domains.py
agents_def/: researcher_agent.py  sales_agent.py
crm/: base.py  matching.py  sheets_store.py
logo/: 6kb2kZiGOndTIVYGqcaqcFrMk-L8eNHlxiRwo41CEt6IQ-ZMy3AtlxDd9OjqBBL7ajDHTYDjV1ds3sbsPd5HzInW1MX_rYTOMYrzzkH9ccrY4Kjj4QUwHHqeZjVCEJg_VhHpnmlxqp_DpRk9o7qJpm2gghXzvdG4dEi4Tt7XY3M.jfif  ovgGtTlO08f5vgxODu4Kobb_FvnUn5Ndk5laVxPd2jKxheIwpZEKfdEfqTtZCeLbt8IIsOIJkVz5TaQDqW34OqQRTDVl039UFQ5n_PK9NiopAj0-u6T7B3RH8kRV0PcURDnwDkliwjTepOxnkKeYoip5iCCmg5KEwmx6kqUMzP0.jfif  woR9Tc0JklQa-piLDkAAk53e0FpO6y06tTcUihf3JWvDdpCKCRkJgcnOiAc4oakgdqLs4dPBAgUs6AEcZVlthINxsby0Q_DBKhzVKd-Ypa2BONtQTbv_WUi0iXcrXzNOk6S4GFJP1O02EawJuh5bRoVJsY4Dt8oDCTposua0e5w.jfif
tools/: brochure_tool.py  crm_tool.py  email_tool.py  fetch_tool.py  push_tool.py  quick_reply_tool.py  research_tool.py
