[project]
name = "dt-sales-bot"
version = "0.1.0"
description = "Deutsche Telekom sales support chatbot: a Sales Agent backed by a web-research Agent tool, ending in an emailed proposal."
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.15.1",
    "gradio>=6.14.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "beautifulsoup4>=4.14.0",
    "xhtml2pdf>=0.2.16",
    "python-pptx>=1.0.2",
    "gspread>=6.2.1",
    "google-auth>=2.56.0",
]
